force-app/main/default/objects/CoverageBenefit__c/CoverageBenefit__c.object-meta.xml
<CustomObject>
    <label>Coverage Benefit</label>
    <pluralLabel>Coverage Benefits</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Coverage Benefit Number</label>
        <displayFormat>CB-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 