force-app/main/default/objects/CoverageBenefit__c/fields/BenefitStatus__c.field-meta.xml
<CustomField>
    <fullName>BenefitStatus__c</fullName>
    <label>Benefit Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 