force-app/main/default/objects/CoverageBenefit__c/fields/CareBenefitVerifyRequest__c.field-meta.xml
<CustomField>
    <fullName>CareBenefitVerifyRequest__c</fullName>
    <label>Care Benefit Verify Request</label>
    <referenceTo>CareBenefitVerifyRequest__c</referenceTo>
    <relationshipLabel>Coverage Benefits</relationshipLabel>
    <relationshipName>VerificationCoverageBenefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField> 