force-app/main/default/objects/CoverageBenefit__c/fields/CopayAmount__c.field-meta.xml
<CustomField>
    <fullName>CopayAmount__c</fullName>
    <label>Copay Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 