force-app/main/default/objects/CoverageBenefit__c/fields/IsCovered__c.field-meta.xml
<CustomField>
    <fullName>IsCovered__c</fullName>
    <label>Is Covered</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField> 