force-app/main/default/objects/CoverageBenefit__c/fields/MemberPlan__c.field-meta.xml
<CustomField>
    <fullName>MemberPlan__c</fullName>
    <label>Member Plan</label>
    <referenceTo>MemberPlan__c</referenceTo>
    <relationshipLabel>Coverage Benefits</relationshipLabel>
    <relationshipName>CoverageBenefits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 