force-app/main/default/objects/CoverageBenefit__c/fields/VerificationDate__c.field-meta.xml
<CustomField>
    <fullName>VerificationDate__c</fullName>
    <label>Verification Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 